# nlm

./: .gitignore  CMakeLists.txt  README.md  build.sh  package-info.json.in  plate_tilde.cpp  test.maxpat
cmake/: StaticLibraryConfig.cmake  build_matio_cpp.cmake  fix_zlib.cmake  make_package.cmake
cmake/modules/: FindARPACK.cmake
cmake/patch/: matio_thirdParties.cmake.in  zlib_CMakeLists.txt.in
extras/: modal_overview.maxpat  nlm_overview.maxpat  overview.maxpat
help/: mc.plate~.maxhelp  mcs.modal.plate~.maxhelp  mcs.modal.string~.maxhelp  mcs.nlm.plate~.maxhelp  mcs.nlm.string~.maxhelp  mcs.string~.maxhelp  modal.plate~.maxhelp  modal.string~.maxhelp  nlm.plate~.maxhelp  nlm.string~.maxhelp  plate~.maxhelp  simple.maxpat  string~.maxhelp
misc/: mylar.yaml  nylon.string_preset  steel.yaml  steel2.yaml
misc/plate_presets/: 0_mylar.yaml  1_steel.yaml  2_steel2.yaml
misc/string_presets/: 0_nylonB.yaml  1_bass.yaml  2_piano.yaml
src/common/coupling/: CMakeLists.txt  coupling.cpp  coupling.h  main.cpp
src/common/magpie/: CMakeLists.txt  main.cpp
src/common/magpie/include/: Dxx_coeffs.h  bhmat.h
src/common/test_libs/: CMakeLists.txt  main.cpp
src/common/vk_utils/: CMakeLists.txt
src/common/vk_utils/include/vk_utils/: CouplingAnalytical.h  Excitations.h  FTM.h  LinearInterpolator.h  ModalSynthesizer.h  ParallelFilter.h  Parameters.h  TimeIntegrators.h  vk_utils.h
src/maxmsp/mcs.modal.plate_tilde/: CMakeLists.txt  mcs.modal.plate_tilde.cpp
src/maxmsp/mcs.modal.string_tilde/: CMakeLists.txt  mcs.modal.string_tilde.cpp  version.h.in
src/maxmsp/mcs.nlm.plate_tilde/: CMakeLists.txt  mcs.nlm.plate_tilde.cpp
src/maxmsp/mcs.nlm.string_tilde/: CMakeLists.txt  mcs.nlm.string_tilde.cpp
src/maxmsp/mcs.plate_tilde/: CMakeLists.txt  mcs.plate_tilde.cpp
src/maxmsp/mcs.string_tilde/: CMakeLists.txt  mcs.string_tilde.cpp
src/maxmsp/modal.plate_tilde/: CMakeLists.txt  modal.plate_tilde.cpp  modal.plate_tilde_test.cpp
src/maxmsp/modal.string_tilde/: CMakeLists.txt  modal.string_tilde.cpp  modal.string_tilde_test.cpp
src/maxmsp/modal_resonator/: CMakeLists.txt  modal_resonator.cpp  modal_resonator.maxhelp  modal_resonator_test.cpp
src/maxmsp/nlm.plate_tilde/: CMakeLists.txt  nlm.plate_tilde.cpp  nlm.plate_tilde_test.cpp
src/maxmsp/nlm.string_tilde/: CMakeLists.txt  nlm.string_tilde.cpp  nlm.string_tilde_test.cpp
src/maxmsp/plate_tilde/: CMakeLists.txt  plate_tilde.cpp  plate_tilde_test.cpp
src/maxmsp/string_tilde/: CMakeLists.txt  string_tilde.cpp  string_tilde_test.cpp
